# yamlgraph

./: .env.sample  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  npc  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: workflow.yml
docs/: Analyzing YAML-Driven LangGraph Repositories.md
docs/battle-test/: 00-linear.md  01-router.md  02-map.md  03-interrupt.md  04-subgraph.md  05-agent-tools.md  README.md
examples/: __init__.py  fastapi_interview.py
examples/book_translator/: models.py
examples/booking/: Dockerfile  README.md  fly.toml  graph.yaml  main.py
examples/codegen/: README.md  __init__.py  impl-agent.yaml
examples/cost-router/: README.md
examples/daily_digest/: Dockerfile  README.md  __init__.py  fly.toml  graph.yaml  run_digest.py  test_email.py
examples/npc/: README.md  architecture.md  demo.py  encounter-loop.yaml  encounter-multi.yaml  encounter-turn.yaml  npc-creation.yaml  run_encounter.py  run_multi_encounter.py
examples/rag/: README.md  __init__.py  demo.sh  graph.yaml  index_docs.py
examples/storyboard/: README.md  __init__.py  animated-character-graph.yaml  animated-graph.yaml  character-graph.yaml  (+2 more)
feature-requests/: 001-interrupt-node.md  002-redis-checkpointer.md  003-async-executor.md  004-streaming-support.md  005-session-manager.md  006-subgraph-checkpointer-inheritance.md  006-subgraph-interrupt-state.md  012-0-fix-cli-checkpointer.md  012-1-deprecate-legacy-resume.md  012-3-remove-legacy-cli.md  012-deprecate-legacy-cli.md  bug-prompts-relative-executor.md  bug-prompts-relative-node-factory.md  chainmap-serialization.md  graph-relative-prompts.md  json-extraction.md
graphs/: feature-brainstorm.yaml  git-report.yaml  hello.yaml  impl-agent.yaml  interrupt-parent-redis.yaml  interrupt-parent-with-checkpointer-child.yaml  interrupt-parent.yaml  interview-demo.yaml  map-demo.yaml  memory-demo.yaml  reflexion-demo.yaml  router-demo.yaml  showcase.yaml  subgraph-demo.yaml  web-research.yaml
prompts/: agent.yaml  analyze_list.yaml  greet.yaml
reference/: README.md  async-usage.md  checkpointers.md  cli.md  getting-started.md  graph-yaml.md  impl-agent.md  interrupt-nodes.md  map-nodes.md  patterns.md  porting-from-showcase.md  prompt-yaml.md  quickstart.md  streaming.md  subgraph-nodes.md  tool-code-analysis.md  web-ui-api.md
scripts/: demo.sh  demo_async_executor.py  demo_interview_e2e.md  demo_interview_e2e.py  demo_streaming.py  run_interview_demo.py  set_fly_secrets.sh  test_interrupt_fix.py  test_subgraph_interrupt.py
showcase/: __init__.py  builder.py  cli.py  config.py  constants.py  error_handlers.py  executor.py  executor_async.py  graph_loader.py  node_factory.py  routing.py  schema_loader.py
site/: index.html
tests/: __init__.py  conftest.py
yamlgraph/: __init__.py  builder.py  config.py  constants.py  error_handlers.py  executor.py  executor_async.py  executor_base.py  graph_loader.py  node_compiler.py  node_factory.py  schema_loader.py
(+343 files in other folders)
