[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yamlgraph"
version = "0.3.12"
description = "YAML-first framework for building LLM pipelines with LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "langsmith>=0.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
analysis = [
    "jedi>=0.19.0",
]
websearch = [
    "ddgs>=6.0.0",
]
storyboard = [
    "replicate>=0.25.0",
]
redis = [
    "langgraph-checkpoint-redis>=0.3.0",
]
redis-simple = [
    "redis>=5.0.0",
    "orjson>=3.9.0",
]

[project.scripts]
yamlgraph = "yamlgraph.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "--cov=yamlgraph --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["yamlgraph"]
omit = [
    "yamlgraph/cli/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
